The parameter 'aStartPos' should use const reference.
Categories
(Core :: Layout: Scrolling and Overflow, defect, P5)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox74 | --- | fixed |
People
(Reporter: u7693, Assigned: u7693, Mentored)
Details
(Keywords: good-first-bug)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:72.0) Gecko/20100101 Firefox/72.0
Steps to reproduce:
The other day I submitted patches (Bug 1602088), and Reviewbot said:
"Warning: The parameter 'aStartPos' is copied for each invocation but only used as a const reference; consider making it a const reference [clang-tidy: performance-unnecessary-value-param] Checker reliability is high, meaning that the false positive ratio is low."
I opened a new bug because this issue is not related to Bug 1602088.
As Reviewbot says, the parameter 'aStartPos' should use const reference.
Bug 1602088: https://bugzilla.mozilla.org/show_bug.cgi?id=1602088
Reviewbot: https://phabricator.services.mozilla.com/D61140#1863383
Comment 1•5 years ago
|
||
Thank you for filing!
You're welcome to write a patch for it if you'd like, or we can let it be a good first bug for another contributor.
| Assignee | ||
Comment 2•5 years ago
|
||
I'll do it right away.
| Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Comment 5•5 years ago
|
||
| bugherder | ||
Description
•