Bug 1613094 - The parameter 'aStartPos' should use const reference. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D61585